# AI_Agent_Framework

./: .gitignore  README.md  pyproject.toml  report.md
latest_ai_development/: pyproject.toml
latest_ai_development/src/latest_ai_development/: main.py
src/the_agents/: crew.py  main.py
src/the_agents/config/: agents.yaml  tasks.yaml
