[project]
name = "the_agents"
version = "0.1.0"
description = "The_Agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1"
]

[project.scripts]
the_agents = "the_agents.main:run"
run_crew = "the_agents.main:run"
train = "the_agents.main:train"
replay = "the_agents.main:replay"
test = "the_agents.main:test"
run_with_trigger = "the_agents.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
